# FOSRA

./: .gitignore  CONVENTIONS.md  FOSRAgitlog.txt  README.md  package-lock.json  package.json  pyproject.toml  pyright_ignores.txt  pytest.toml  squash_by_date.py  stream_stub_ag.py  test  test_lab.py
.serena/: project.yml
FOSRABack/: alembic.ini  conf.env  retrieval_fixtures.py
FOSRABack/src/: __init__.py  app.py  setup_defaults.py
FOSRABack/src/api/: dependencies.py  exception_handlers.py  lifecycle.py  request_context.py
FOSRABack/src/api/routes/: assistant.py  config.py  llm.py  search.py  test_routes.py  user.py  workspace.py
FOSRABack/src/api/schemas/: __init__.py  api_schemas.py  config_api_schemas.py  convo_api_schemas.py  file_api_schemas.py  settings_api_schemas.py  source_api_schemas.py  utility_api_schemas.py
FOSRABack/src/domain/: enums.py
FOSRABack/src/domain/exceptions/: __init__.py  exceptions.py
FOSRABack/src/domain/schemas/: __init__.py  config_schemas.py  file_schemas.py  schemas.py  service_schemas.py  source_schemas.py  utility_schemas.py
FOSRABack/src/migrations/: env.py
FOSRABack/src/migrations/versions/: f0d15d2b0963_union_type_change_to_string.py  ffef6ad4becb_change_attached_files_to_jsonb.py
FOSRABack/src/services/conversation/: conversation_service.py  (+6 more)
FOSRABack/src/settings/: __init__.py  observe.py  schemas.py
FOSRABack/src/storage/: models.py
FOSRABack/src/tasks/: broker.py  ingesting.py  orchestrator.py  processing.py  retrieving.py  searching.py  storing.py  streaming.py
FOSRABack/tests/: __init__.py
FOSRABack/tests/orchestration/: test_main_flow_nodes.py
FOSRABack/tests/processing/: test_chunker_service.py  test_embedder_service.py  test_parser_service.py  test_processing_pipeline.py  tests_ingestion.py
FOSRAFront/: README.md  components.json  openapi-ts.config.ts  tailwind.config.js
FOSRAFront/src/: auth.tsx  routeTree.gen.ts  styles.css  vite-env.d.ts
FOSRAFront/src/hooks/: state-hooks.tsx
FOSRAFront/src/routes/: __root.tsx  create_user.tsx  index.tsx
backend/: __init__.py
backend/src/: app.py  setup_defaults.py
backend/src/api/: dependencies.py  exception_handlers.py  lifecycle.py  request_context.py
backend/src/migrations/: env.py
backend/src/settings/: __init__.py  observe.py  schemas.py
backend/src/storage/: convo.py  models.py  user.py
backend/src/tasks/: broker.py  ingesting.py  orchestrator.py  processing.py  retrieving.py  searching.py  storing.py  streaming.py
backend/tests/orchestration/: test_main_flow_nodes.py
backend/tests/processing/: test_chunker_service.py  test_embedder_service.py  test_parser_service.py  test_processing_pipeline.py  tests_ingestion.py
frontend/: openapi.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  wdyr.ts
frontend/src/: main.tsx  sidebar.tsx
frontend/src/hooks/: convo_hooks.tsx
frontend/src/routes/: login.tsx
(+106 files in other folders)
