[project]
name = "FOSRA"
version = "0.2.0"
description = """FOSRA — A modular RAG and internet search interface"""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aioresult>=1.2",
  "aiosqlite>=0.21.0",
  "anyio>=4.11.0",
  "asyncpg>=0.30.0",
  "chonkie[all,st]>=1.4.0",
  "docling[chunking]>=2.59.0",
  "docling-core[chunking]>=2.50.0",
  "elasticsearch>=9.1.1",
  "en-core-web-sm@https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
  "faster-whisper>=1.1.0",
  "fastembed>=0.7.3",
  "firecrawl-py>=1.12.0",
  "flower>=2.0.1",
  "ftfy>=6.3.1",
  "github3-py==4.0.1",
  "google-api-python-client>=2.156.0",
  "httpx>=0.28.1",
  "langchain[unstructured]>=1.0.5",
  "langchain-community>=0.4.1",
  "langgraph>=0.3.29",
  "linkup-sdk>=0.2.4",
  "litellm>=1.78.0",
  "loguru>=0.7.3",
  "markdownify>=0.14.1",
  "markitdown>=0.1.3",
  "numpy>=1.24.0",
  "orjson>=3.11.3",
  "passlib>=1.7.4",
  "platformdirs>=4.5.0",
  "playwright>=1.50.0",
  "protobuf>=6.32.1",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pypandoc>=1.15",
  "pysnooper>=1.2.3",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-dotenv>=0.5.2",
  "python-dotenv>=1.1.1",
  "python-ffmpeg>=2.0.12",
  "python-jose[cryptography]>=3.5.0",
  "python-magic>=0.4.27",
  "python-multipart>=0.0.20",
  "python-ulid[pydantic]>=3.1.0",
  "qdrant-client>=1.15.1",
  "rerankers[flashrank]>=0.7.1",
  "rich>=13.0.0",
  "ruff>=0.14.4",
  "sentence-transformers>=5.1.1",
  "spacy>=3.8.7",
  "sqlalchemy>=2.0.43",
  "strenum>=0.4.15",
  "tavily-python>=0.3.2",
  "textual>=6.4.0",
  "unstructured[all-docs]>=0.18.15",
  "unstructured-client>=0.30.0",
  "uvicorn[standard]>=0.34.0",
  "uvloop>=0.21.0",
  "uuid7>=0.1.0",
  "validators>=0.34.0",
  "xxhash>=3.6.0",
  "blake3>=1.0.8",
  "mypy>=1.18.2",
  "aider>=0.2.6",
  "easyocr>=1.7.2",
  "langchain-litellm>=0.3.2",
  "pudb>=2025.1.4",
  "hunter>=3.9.0",
  "exa-py>=2.0.1",
  "aiofiles>=25.1.0",
  "fastapi[cli]>=0.124.4",
  "fastapi-cli>=0.0.16",
  "aiobotocore>=3.0.0",
  "llama-parse>=0.6.88",
  "basedpyright>=1.36.1",
  "code2flow>=2.5.1",
  "graphviz>=0.21",
  "taskiq>=0.12.1",
  "msgspec>=0.20.0",
  "opentelemetry-exporter-otlp>=1.39.1",
  "taskiq-fastapi>=0.4.0",
  "pypdf>=6.1.3",
  "langchain-unstructured>=1.0.1",
  "transformers>=4.57.1",
  "ipdb>=0.13.13",
  "pdbpp>=0.11.7",
  "pynvim>=0.6.0",
  "jupyter-client>=8.8.0",
  "pyjwt>=2.10.1",
  "pwdlib[argon2]>=0.3.0",
  "psycopg2-binary>=2.9.11",
  "deepagents>=0.3.8",
  "markdown>=3.10.1",
  "pympler>=1.1",
  "alembic>=1.18.3",
]

[project.scripts]

[dependency-groups]
dev = [
    "py2puml>=0.10.0",
    "pylyzer>=0.0.82",
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["backend*"]



